feat: add assets

--- a/src/App.css
+++ b/src/App.css
@@ -91,4 +91,10 @@ img {
     font-size: var(--h1-font-size);
     margin-left: .875rem;
     font-weight: var(--font-bold);
+    position: relative;
+    margin-bottom: 3.75rem;
+}
+
+.section__title::before {
+    content: '';
 }
