--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,15 +1,20 @@
+.nav__logo {
+    width: 30px;
+}
+
 .aside {
     position: fixed;
     left: 0;
     top: 0;
     background: var(--body-color);
     border-right: 1px solid #0000000d;
-    padding: 2.5rem;
-    width: 110px;
+    padding: 1.5rem;
+    width: 80px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     z-index: 10;
 }
 
@@ -20,9 +25,14 @@
 }
 
 .nav__link {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: var(--title-color);
     font-weight: var(--font-bold);
+    transition: .3s;
+}
+
+.nav__link:hover {
+    color: var(--first-color);
 }
 
 .copyright {
