--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -89,3 +89,70 @@
     transform: translateX(-50%);
     animation: ani-mouse 1.5s linear infinite;
 }
+
+.shapes {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.shape {
+    position: absolute;
+}
+
+.s1 {
+    left: 2%;
+    top: 10%;
+}
+
+.s2 {
+    left: 18%;
+    top: 30%;
+}
+
+.s3 {
+    left: 5%;
+    bottom: 35%;
+}
+
+.s4 {
+    left: 2%;
+    bottom: 10%;
+}
+
+.s5 {
+    left: 44%;
+    top: 10%;
+}
+
+.s6 {
+    left: 30%;
+    bottom: 17%;
+}
+
+.s7 {
+    right: 25%;
+    top: 20%;
+}
+
+.s8 {
+    right: 8%;
+    top: 40%;
+}
+
+.s9 {
+    right: 2%;
+    top: 10%;
+}
+
+.s10 {
+    right: 20%;
+    bottom: 28%;
+}
+
+.s11 {
+    right: 15%;
+    bottom: 10%;
+}
