--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --h1-font-size: 2.25rem;
   --h2-font-size: 1.5rem;
   --h3-font-size: 1.25rem;
-  --normal-font-size: 1rem;
+  --normal-font-size: .8rem;
   --small-font-size: 0.875rem;
   --smaller-font-size: 0.813rem;
 
@@ -19,7 +19,7 @@
   --font-semibold: 600;
   --font-bold: 700;
 
-  --shadow: 0px 5px 20px 0px #434a60;
+  --shadow: 0px 2px 9px 1px #6a87e323;
 
   --border-radius: 20px;
 }
@@ -29,7 +29,7 @@
     --h1-font-size: 1.75rem;
     --h2-font-size: 1.25rem;
     --h3-font-size: 1.rem;
-    --normal-font-size: 0.938rem;
+    --normal-font-size: 0.838rem;
     --small-font-size: 0.813rem;
     --smaller-font-size: 0.75rem;
   }
