--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
   --font-semibold: 600;
   --font-bold: 700;
 
-  --shadow: 0px 2px 9px 1px #6a87e323;
+  --shadow: 0px 0px 20px 0px #6a87e355;
 
   --border-radius: 20px;
 }
@@ -101,6 +101,7 @@ img {
 .section {
   padding-top: 7rem;
   padding-bottom: 2rem;
+  min-height: 100vh;
 }
 
 .section__title {
